--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel ="stylesheet" type="text/css" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+  <![endif]-->
+    <title>Portfolio Website</title>
+</head>
+<body>
+    <div class="container">
+    <h1 aria-label="header">Header 1</h1>
+    <button class="button" type="button" aria-label="fancy button">Fancy</button>
+    </div>
+    <div class="boxContainer">
+    <div class="box">Follow me!</div>
+    </div>
+</body>
+</html>
