finished nav bar

--- a/index.html
+++ b/index.html
@@ -2,20 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel ="stylesheet" type="text/css" href="style.css">
+    <link rel="shortcut icon" type="image/png" href="/quickLogo.png">
+    <link rel ="stylesheet" type="text/css" href="style1.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-  <![endif]-->
+<![endif]-->
     <title>Portfolio Website</title>
 </head>
 <body>
-    <div class="container">
-    <h1 aria-label="header">Header 1</h1>
-    <button class="button" type="button" aria-label="fancy button">Fancy</button>
+
+<nav>
+    <div class="logo">
+        <a href="#" alt="Logo with link to homepage">
+            <img class="logoImg" src="/quickLogo.png">
+        </a>
     </div>
-    <div class="boxContainer">
-    <div class="box">Follow me!</div>
+    <ul class="navLinks">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About Me</a></li>
+        <li><a href="#">Projects</a></li>
+    </ul>
+    <div class="burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
     </div>
+</nav>
+<script src="app.js"></script>
 </body>
 </html>
