--- a/index.html
+++ b/index.html
@@ -12,23 +12,77 @@
 </head>
 <body>
 
+
 <nav>
-    <div class="logo">
-        <a href="#" alt="Logo with link to homepage">
-            <img class="logoImg" src="/quickLogo.png">
-        </a>
-    </div>
-    <ul class="navLinks">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About Me</a></li>
-        <li><a href="#">Projects</a></li>
-    </ul>
-    <div class="burger">
-        <div class="line1"></div>
-        <div class="line2"></div>
-        <div class="line3"></div>
-    </div>
+
 </nav>
+<div class="logo">
+    <a href="/" alt="Logo with link to homepage">
+        <img class="logoImg" src="/quickLogo.png">
+    </a>
+</div>
+<div id="navLinkHolder">
+<ul class="navLinks">
+    <li><a href="/">Home</a></li>
+    <li><a href="about.html">About Me</a></li>
+    <li><a href="projects.html">Projects</a></li>
+</ul>
+</div>
+<div class="burger">
+    <div class="line1"></div>
+    <div class="line2"></div>
+    <div class="line3"></div>
+</div>
+<!-- moved all the nav content out, added div class to ul's -->
+
+
 <script src="app.js"></script>
+<!-- <div class="imageContainer"><img id="mainImg" src="/DSC_0938-min.jpg"> -->
+
+<div class="pimg1">
+    <div class="text1">
+        <span class="border">
+            Parallax web
+        </span>
+    </div>
+</div>
+
+<section class="section section-light">
+    <h2>header</h2>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, temporibus deserunt. Ipsa sunt a temporibus nostrum, consectetur iste corrupti, ea et veritatis libero quia accusamus culpa velit inventore aliquid enim maiores nesciunt reiciendis deserunt quos in explicabo! Saepe, amet reiciendis quidem provident temporibus exercitationem quam minima qui aliquam nam, quasi tempore vitae quas minus. Ex cum cupiditate maiores enim placeat, ratione aspernatur unde quis facere laudantium minima dolor! Explicabo ipsa nam nesciunt odit numquam quia at ducimus, cumque vero ullam quas natus alias magni molestias ut dolorum doloremque repudiandae expedita, voluptas eligendi veritatis libero impedit nihil. Ipsa repudiandae maxime saepe!
+    </p>
+</section>
+
+<div class="pimg2">
+    <div class="text2">
+        <span class="border">
+            Parallax web
+        </span>
+    </div>
+</div>
+
+<section class="section section-dark">
+    <h2>header 2</h2>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, temporibus deserunt. Ipsa sunt a temporibus nostrum, consectetur iste corrupti, ea et veritatis libero quia accusamus culpa velit inventore aliquid enim maiores nesciunt reiciendis deserunt quos in explicabo!
+    </p>
+</section>
+
+<div class="pimg3">
+    <div class="text3">
+        <span class="border">
+            Image 3
+        </span>
+    </div>
+</div>
+
+<section class="section section-dark">
+    <h2>header 3</h2>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, temporibus deserunt. Ipsa sunt a temporibus nostrum, consectetur iste corrupti, ea et veritatis libero quia accusamus culpa velit inventore aliquid enim maiores nesciunt reiciendis deserunt quos in explicabo! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates ipsam perferendis impedit officia nostrum, ab ipsum ea praesentium dolore quos.
+    </p>
+</section>
+
 </body>
 </html>
