--- a/projects.html
+++ b/projects.html
@@ -30,6 +30,6 @@
     </div>
 </nav>
 <script src="app.js"></script>
-<p>This is an about me page</p>
+<p>This is a projects page</p>
 </body>
 </html>
