--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     
     <ul class="navLinks">
         <li><a href="/">Home</a></li>
-        <li><a href="about.html">About Me</a></li>
-        <li><a href="projects.html">Projects</a></li>
+        <li><a href="#aboutMe">About Me</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contactMe">Contact</a></li>
     </ul>
     
     <div class="burger">
@@ -46,37 +47,38 @@
 </div>
 
 <section class="section section-light">
-    <h2>header</h2>
+    <h2 id="aboutMe">About Me</h2>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, temporibus deserunt. Ipsa sunt a temporibus nostrum, consectetur iste corrupti, ea et veritatis libero quia accusamus culpa velit inventore aliquid enim maiores nesciunt reiciendis deserunt quos in explicabo! Saepe, amet reiciendis quidem provident temporibus exercitationem quam minima qui aliquam nam, quasi tempore vitae quas minus. Ex cum cupiditate maiores enim placeat, ratione aspernatur unde quis facere laudantium minima dolor! Explicabo ipsa nam nesciunt odit numquam quia at ducimus, cumque vero ullam quas natus alias magni molestias ut dolorum doloremque repudiandae expedita, voluptas eligendi veritatis libero impedit nihil. Ipsa repudiandae maxime saepe!
     </p>
 </section>
 
-<div class="pimg2">
+<div class="pimg2" id="projects">
     <div class="text2">
         <span class="border">
-            Parallax web
+            Projects
         </span>
     </div>
 </div>
 
 <section class="section section-dark">
-    <h2>header 2</h2>
+    <h2>Projects</h2>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, temporibus deserunt. Ipsa sunt a temporibus nostrum, consectetur iste corrupti, ea et veritatis libero quia accusamus culpa velit inventore aliquid enim maiores nesciunt reiciendis deserunt quos in explicabo!
     </p>
 </section>
 
-<div class="pimg3">
+
+<div class="pimg3" id="contactMe">
     <div class="text3">
         <span class="border">
-            Image 3
+            Contact Me
         </span>
     </div>
 </div>
 
 <section class="section section-dark">
-    <h2>header 3</h2>
+    <h2>Contact Me</h2>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, temporibus deserunt. Ipsa sunt a temporibus nostrum, consectetur iste corrupti, ea et veritatis libero quia accusamus culpa velit inventore aliquid enim maiores nesciunt reiciendis deserunt quos in explicabo! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates ipsam perferendis impedit officia nostrum, ab ipsum ea praesentium dolore quos.
     </p>
