--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
 <nav>
     <div class="logo">
-        <a href="/" alt="Logo with link to homepage">
+        <a href="#topImg" alt="Logo with link to homepage">
             <img class="logoImg" src="/quickLogo.png">
         </a>
     </div>
     
     <ul class="navLinks">
-        <li><a href="/">Home</a></li>
+        <li><a href="#topImg">Home</a></li>
         <li><a href="#aboutMe">About Me</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contactMe">Contact</a></li>
@@ -38,7 +38,7 @@
 
 <script src="app.js"></script>
 
-<div class="pimg1">
+<div class="pimg1" id="topImg">
     <div class="text1">
         <span class="border">
             Parallax web
