link fade somewhat working

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </a>
     </div>
     
-    <ul class="navLinks">
+    <ul class="navLinks" id="navLinksID">
         <li><a href="#topImg">Home</a></li>
         <li><a href="#aboutMe">About</a></li>
         <li><a href="#projects">Projects</a></li>
@@ -82,7 +82,8 @@
 <section class="section" id="contactMe">
     <h1>Contact Me</h1><br>
     <p>
-        stimmerman@protonmail.com
+        stimmerman@protonmail.com<br>
+        <a href="www.linkedin.com/in/sarah-st-timmerman" alt="Linked In profile" target="_blank">LinkedIn</a>
     </p><br>
 </section>
 
