--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 <section class="section" id="contactMe">
     <h1>Contact Me</h1><br>
     <p>
+        <a href="https://www.linkedin.com/in/sarah-st-timmerman" target="_blank">LinkedIn</a><br>
         stimmerman@protonmail.com<br>
-        <a href="www.linkedin.com/in/sarah-st-timmerman" alt="Linked In profile" target="_blank">LinkedIn</a>
     </p><br>
 </section>
 
