--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <section class="section" id="aboutMe">
     <h1>About Me</h1><br>
     <p>
-        A recent graduate of the Clubhou.se coding bootcamp, and a BFA recpient, I am a Junior Web Developer with a strong foundation in the arts. My curiosity at an early age led me to tinker with programs and create my own page designs. Creative problem solving, innovative solutions and a passion for learning has set me on a journey into the fasinating world of computer programming. 
+        A recent graduate of the Clubhou.se coding bootcamp, and a BFA recipient, I am a Junior Web Developer with a strong foundation in the arts. My curiosity at an early age led me to tinker with programs and create my own page designs. Creative problem solving, innovative solutions and a passion for learning has set me on a journey into the fascinating world of computer programming. 
     </p><br>
 </section>
 
