added fontawesome and picture

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/png" href="/quickLogo.png">
     <link rel ="stylesheet" type="text/css" href="style1.css">
+    <link href="/css/all.css" rel="stylesheet">
+    <link href="/webfonts/fontawesome.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -48,10 +50,15 @@
 </div>
 
 <section class="section" id="aboutMe">
-    <h1>About Me</h1><br>
-    <p>
+    <div class="head"><h1>About Me</h1></div>
+
+    <div class="pic"><img id="profilepic" src="profilepicture.jpg" alt="Close up profile picture with rounded border"><br><br>
+    </div>
+
+    <div class="content">
+        <p><br>
         A recent graduate of the Clubhou.se coding bootcamp, and a BFA recipient, I am a Junior Web Developer with a strong foundation in the arts. My curiosity at an early age led me to tinker with programs and create my own page designs. Creative problem solving, innovative solutions and a passion for learning has set me on a journey into the fascinating world of computer programming. 
-    </p><br>
+    </p><br><br></div>
 </section>
 
 <div class="pimg2">
@@ -65,9 +72,10 @@
 <section class="section" id="projects">
     <h1>Projects</h1><br>
     <p>
-        <a href="https://github.com/mooseseatgrass" target="_blank">GitHub</a><br>
-        <a href="https://codepen.io/mooseseatgrass" target="_blank">CodePen</a>
-    </p><br>
+        <a href="https://github.com/mooseseatgrass" target="_blank"><i class="fab fa-github"></i> GitHub</a><br>
+        <a href="https://dev.to/mooseseatgrass" target="_blank"><i class="fab fa-dev"></i> Blog</a><br>
+        <a href="https://codepen.io/mooseseatgrass" target="_blank"><i class="fab fa-codepen"></i> CodePen</a>
+    </p>
 </section>
 
 
@@ -82,8 +90,8 @@
 <section class="section" id="contactMe">
     <h1>Contact Me</h1><br>
     <p>
-        <a href="https://www.linkedin.com/in/sarah-st-timmerman" target="_blank">LinkedIn</a><br>
-        stimmerman@protonmail.com<br>
+        <a href="https://www.linkedin.com/in/sarah-st-timmerman" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a><br>
+        <i class="fas fa-envelope-square fa-lg"></i>  stimmerman@protonmail.com<br>
     </p><br>
 </section>
 
